# CoalescenceAfterburner

./: .gitignore  CMakeLists.txt  README.md  main.cxx  main_a3.cxx  main_a4.cxx  main_toymc.cxx
include/: CMFrameBooster.h  CoalescenceEngine.h  CoalescenceEngineHe3.h  CoalescenceEngineHe4.h  CoalescenceEngineLi4.h  Event.h  EventReader.h  IntegratorA3.h  IntegratorA4.h  JacobiTransform.h  MomentumSampler.h  MultiplicityModel.h  Particle.h  SourceSampler.h  SourceSize.h  ToyMCEngine.h  ToyMCEngineA3.h  ToyMCEngineA4.h  WignerDensity.h  WignerDensityA.h
input/: extract_hists_from_hepdata.py
src/: CoalescenceEngine.cxx  CoalescenceEngineHe3.cxx  CoalescenceEngineHe4.cxx  CoalescenceEngineLi4.cxx  EventReader.cxx  IntegratorA3.cxx  IntegratorA4.cxx  ToyMCEngine.cxx  ToyMCEngineA3.cxx  ToyMCEngineA4.cxx
